7-May Updates: - implement changes for uat version
